# self-correcting-rag

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: rag_agent.py
backend/app/api/: evaluate.py  ingest.py  query.py  sessions.py
backend/app/core/: cache.py  database.py  evaluator.py  llm.py  vector_store.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: ChatInterface.jsx  IngestPanel.jsx  QueryPanel.jsx  TraceViewer.jsx
