[project]
name = "agentic-rag-backend"
version = "1.0.0"
description = "Multi-step agentic RAG pipeline with Groq"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasets>=2.19.0,<4.0.0",
    "ddgs>=9.11.1",
    "faiss-cpu>=1.9.0,<2.0.0",
    "fastapi>=0.111.0,<1.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "langchain>=0.3.0,<1.0.0",
    "langgraph>=0.2.0,<1.0.0",
    "numpy>=2.0.0,<3.0.0",
    "openai>=2.21.0",
    "pydantic>=2.7.0,<3.0.0",
    "pypdf>=6.7.5",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-multipart>=0.0.22",
    "ragas>=0.2.0,<1.0.0",
    "rank-bm25>=0.2.2",
    "redis>=7.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=3.0.0,<4.0.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.37",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "wikipedia>=1.4.0,<2.0.0",
]

[tool.uv]
package = false
